manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: phrase
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: phrase
spec:
  ports:
  - name: redis
    port: 6379
  selector:
    app: redis
