manifests/ingress.yaml

#Ingress controler deployed through:
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/cloud/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phrase-ingress
  namespace: phrase 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/prepare-for-deploy" {
          deny all;
          return 403;
        }
      location ~* "^/ready-for-deploy" {
          deny all;
          return 403;
        }
spec:
  tls:
  - secretName: phrase-tls-secret
  rules:
  - host: phrase.abv.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phrase-svc
              port:
                number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phrase-ingress-auth
  namespace: phrase 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
  - secretName: phrase-tls-secret
  rules:
  - host: phrase.abv.com
    http:
      paths:
        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: phrase-svc
              port:
                number: 5000
        - path: /drop_db
          pathType: Prefix
          backend:
            service:
              name: phrase-svc
              port:
                number: 5000
        - path: /create_db
          pathType: Prefix
          backend:
            service:
              name: phrase-svc
              port:
                number: 5000
        - path: /redis_flush
          pathType: Prefix
          backend:
            service:
              name: phrase-svc
              port:
                number: 5000
